fixed alignment issues

--- a/assets.website-files.com/605cf560c1c73e1ee595cfc6/css/style.css
+++ b/assets.website-files.com/605cf560c1c73e1ee595cfc6/css/style.css
@@ -310,7 +310,7 @@ p.typewrite-cursor::after {
   margin: auto;
   height: auto;
   padding: 12px 22px !important;
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 /* voice over video */
